upgrade dashboard dan Keamanan saat Login

--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -49,11 +49,11 @@ body {
   transition: background-color 0.3s, color 0.3s;
 }
 
-/* LIGHT MODE OVERRIDE */
 body.light-mode {
   background-color: var(--bg-light);
   color: var(--text-light);
 }
+
 
 
 /* --- APP LAYOUT --- */
@@ -391,9 +391,11 @@ body.light-mode .login-box {
   padding: 10px;
   margin-top: 6px;
   border-radius: 6px;
-  border: 1px solid #23303a;
-  background: #0b1220;
-  color: var(--text-light);
+  border: 2px solid #cfe5db;        /* hijau muda */
+  background: #f7fbf9;              /* hijau terang */
+  color: #102a23;                   /* teks gelap */
+  font-size: 14px;
+  transition: border-color 0.3s, box-shadow 0.3s;
 }
 body.light-mode .login-box input {
   background: #fff;
