--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -43,7 +43,7 @@
 
 /* --- BASE STYLE --- */
 body {
-  background-color: var(--bg-light);
+  background-color: #cfe5db;
   color: var(--text-dark);
   font-family: "Inter", sans-serif;
   transition: background-color 0.3s, color 0.3s;
